fix some clippy error and a hydration error caused by updating transactions

--- a/qualinvest-gui/style/main.scss
+++ b/qualinvest-gui/style/main.scss
@@ -369,4 +369,15 @@
         color: var(--row-selected-color);
         border-color: var(--row-selected-background-color);
     }
+
+    .button-cell {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .button-cell img {
+        display: inline-block;
+    }
 }
